--- a/style.css
+++ b/style.css
@@ -327,5 +327,172 @@
     color:rgb(6, 224, 119) ;
 
 }
+.sec10{
+    box-sizing: border-box;
+    font-size: 14px;
+    background-color: #f2f2f2;
+    width: 600px;
+    padding: 25px;
+    margin: 50px auto 0;
+    border-top: 5px solid blue;
+    box-shadow: 0 0 7px 5px rgba(0, 0, 0, 0.5);
+}
+.sec10 h2{
+    font-size: 22px;
+    line-height: 22px;
+    padding: 30px;
+    text-align: center;
+}
+.sec10a1b1{
+    width: 100%;
+    position: relative;
+    margin: 20px auto;
+    width: 100%;
+    padding: 8px 0 8px 40px;
+    margin: 20px auto;
+    
+    
+}
+.lock{
+ padding: 8px 11px;
+}
+.sec10a1b1c1{
+    width: 40%;
+    padding: 8px 0 8px 40px;
+}
+.sec10a1b1 span{
+    margin-left: 25px;
+}
+.sec10a1b2{
+    width: 100%;
+    padding: 8px 0 8px 40px;
+    margin: 20px auto;
+    
+
+}
+.sec10a1b3{
+    width: 100%;
+    padding: 8px 0 8px 40px;
+    margin: 20px auto;
+    
+}
+.sec10a1b1 i{
+position: absolute;
+font-size: 18px;
+color: blue;
+border-right: 1px solid black ;
+}
+.sec10a1b2 i{
+position: absolute;
+    font-size: 18px;
+    color: blue;
+    border-right: 1px solid black ;
+}
+.sec10a1b3 i{
+    font-size: 18px;
+    color:blue;
+    position: relative;
+}
+.sec10a1b1c6{
+    margin-right: 15px;
+    position: relative;
+}
+.sec10a1b1c6::before{
+    content: "";
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    margin-right: 8px;
+    vertical-align: -2px;
+    border: 2px solid #cccccc;
+    padding: 2.5px;
+    background-color: transparent;
+    background-clip: content-box;
+    transition: all 0.2s ease;
+}
+.sec10a1b1c6::after{
+    border-right: 2px solid black;
+    border-top: 2px solid black;
+    content: "";
+    height: 20px;
+    left: 2px;
+    position: absolute;
+    top: 7px;
+    transform: scaleX(-1) rotate(135deg);
+    transform-origin: left top;
+    width: 7px;
+    display: none;
+}
+.sec10a1b1c5{
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+}
+.sec10a1b1c5:hover + .sec10a1b1c6::before{
+    border-color:blue ;
+}
+.sec10a1b1c5:checked +.sec10a1b1c6::before{
+    border-color: green;
+}
+.sec10a1b1c5:checked +.sec10a1b1c6::after{
+    -moz-animation: check 0.8s ease 0s running;
+    -webkit-animation: check 0.8s ease 0s running;
+    animation: check 0.8s ease 0s running;
+    display: block;
+    height: 20px;
+    width: 7px;
+    border-color: green;
+}
+@keyframes check {
+    0%{
+        height: 0; width: 0;
+    }
+    
+    25%{
+        height: 0; width: 7px;
+    }
+    50%{
+        height: 20px; width: 7px;
+    }
+}
+.sec10a1b1c7{
+    background-color: blue;
+    color: white;
+    height: 35px;
+    line-height: 35px;
+    width: 80%;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+.sec10a1b1c7:hover{
+    background-color: green;
+}
+@media screen and (max-width: 800px) {
+    
+    .sec10a1{
+        width: 80%;
+        padding: 5px;
+    }
+    .sec10a1b1{
+        margin-bottom: -10px;
+    }
+    .sec10a1b1c1{
+        width: 80%;
+        padding: 8px 0 8px 40px;
+        margin-bottom: 10px;
+    }
+    .sec10a1b1 span{
+        padding: 0;
+        margin: 0;
+    }
+}
+
 
 
