--- a/style.css
+++ b/style.css
@@ -761,6 +761,54 @@ tbody tr:hover {
 tr:last-child td {
     border-bottom: none;
 }
+.bd {
+    font-family: "Roboto", sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #e6e6ea;
+}
+.confirmation-container {
+    text-align: center;
+    background: #fff;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+}
+.confirmation-container h1 {
+    color: #4CAF50;
+    margin-bottom: 1rem;
+}
+.confirmation-container p {
+    color: #333;
+    margin-bottom: 1.5rem;
+}
+.confirmation-container a {
+    display: inline-block;
+    padding: 0.75rem 1.5rem;
+    color: #fff;
+    background-color: #4CAF50;
+    text-decoration: none;
+    border-radius: 4px;
+
+}
+.confirmation-container a:hover {
+    background-color: #45a049;
+}
+@media screen and (max-width:800px) {
+    .confirmation-container{
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        
+    }
+}
+
 
 
 
